--- a/style.css
+++ b/style.css
@@ -13,3 +13,9 @@ body {
   margin: 1rem;
   border-bottom: 1px solid #eeeeee;
 }
+
+.roleCard {
+  width: 300px;
+  border: 1px solid #808080;
+  border-radius: 10px;
+}
